Fix Page Jump Bug
I fixed the page jump bug that I was working on yesterday.  It was just a matter of positioning.  I was jumping to the right spot.  I just needed some space to make room for the navbar.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -57,7 +57,7 @@ body {
 }
 
 .video-text p {
-    padding: 0px 400px 0px 400px;
+    padding: 0px 200px 0px 200px;
 }
 
 /**************************
@@ -160,6 +160,7 @@ footer {
 }
 
 h1 {
+    padding-top: 20px;
     text-align: center;
 }
 
